# llm-resource-planner

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  LICENSE  README.md  planner.py  pyproject.toml
llm_resource_planner/: cli.py
