[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-resource-planner"
version = "0.1.0"
description = 'Estimate VRAM requirements for HuggingFace LLMs without downloading model weights'
readme =  'README.md'
license = {text = 'MIT'} 
requires-python = '>=3.8'

authors = [
  {name = 'DeepAgency'}
]

dependencies = [
  'transformers',
  'requests'
]

[project-series]
llm-plan = 'llm_resource_planner.cli:main'
