[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-resource-planner"
version = "0.2.0"
description = "CLI tool to estimate VRAM requirements and GPU fit for Hugging Face LLMs without downloading model weights"
readme =  'README.md'
license = {text = 'MIT'}
requires-python = '>=3.8'

authors = [
  {name = 'DeepAgency'}
]

dependencies = [
  'transformers',
  'argparse'
]

[project.scripts]
llm-plan = 'llm_resource_planner.cli:cli'
